<?xml version="1.0"?>
<package>
  <name>evol</name>
  <version>0.0.1</version>
  <description>Event-based Tracking test</description>

  <maintainer email="herbstc@student.ethz.ch">Constantin Herbst</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dvs_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>dvs_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>


  <export>
  </export>
</package>
